<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:text="@string/signup_heading" >
    </TextView>

    <ScrollView
        android:id="@+id/ScrollViewLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:fadeScrollbars="false"
        android:isScrollContainer="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/login_page_txt_usrname"
                android:textColor="@android:color/black" >
            </TextView>

            <EditText
                android:id="@+id/EditText_signup_usrname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/login_page_txt_usrname_hint"
                android:inputType="textPersonName"
                android:maxLines="1" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/login_page_txt_pass"
                android:textColor="@android:color/black" >
            </TextView>

            <EditText
                android:id="@+id/EditText_signup_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/login_page_txt_pass_hint"
                android:inputType="textPassword"
                android:maxLines="1" >
            </EditText>
            
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/signup_confirm_pass"
                android:textColor="@android:color/black" >
            </TextView>

            <EditText
                android:id="@+id/EditText_signup_pass_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/login_page_txt_pass_hint"
                android:inputType="textPassword"
                android:maxLines="1" >
            </EditText>
            
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/login_page_txt_email"
                android:textColor="@android:color/black" >
            </TextView>

            <EditText
                android:id="@+id/EditText_signup_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/login_page_txt_email_hint"
                android:inputType="textPersonName"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>
    </ScrollView>

          <RelativeLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
            
            <Button 
                   android:id="@+id/btn_main_signup"
                  android:text="@string/title_activity_Signup"
                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:paddingLeft="50dp" 
                    android:paddingRight="50dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/btn_bg">
              </Button>

              <Button 
                   android:id="@+id/btn_signup_cancel"
                  android:text="@string/txt_cancel"
                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:textColor="@android:color/white" 
                    android:layout_alignParentRight="true"
                    android:paddingLeft="50dp" 
                    android:paddingRight="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_bg">
              </Button>
            
    </RelativeLayout>
</LinearLayout>